# step-proof

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark.sh  build_calc_graph_stage1.py  build_calc_graph_stage2.py  build_calc_graph_stage3.py  check_stage3_fully_verified.py  collect_cot_traces.py  compare_experiment_id_flow.py  example.ipynb  example.py  example_calc.py  proof_dag.html  pyproject.toml  requirements.txt  run_experiment.py  setup.py  start_vllm_formalizer.sh  start_vllm_graph_qwen3.sh  test_lean.py  visualize_calc_graph_stage1.py  visualize_calc_graph_stage2.py
benchmark_results/: benchmark_no_think_DAG.py  benchmark_no_think_noDAG.py  benchmark_think_DAG.py  benchmark_think_noDAG.py  full_proof_nothink.py  full_proof_think.py  process_benchmark_error_analysis.py  process_benchmark_files.py  result_summary_fullproof.py  result_summary_stepproof.py  step_proof_nothink.py  step_proof_think.py
benchmark_results/output_tables/: benckmark1 - no think DAG - pass 5.xlsx  benckmark3 - think DAG - pass 5.xlsx  benckmark5 - no think noDAG - pass 5.xlsx  benckmark6 - think noDAG - pass 5.xlsx  error_analysis.xlsx  fullproof_results_summary_nothink.txt  fullproof_results_summary_think.txt  stepproof_results_summary_nothink.txt  stepproof_results_summary_think.txt  ~$error_analysis.xlsx
configs/: experiment.yaml  experiment_fdg.yaml
configs/rl/: fdg_grpo.yaml  fdg_grpo_412.yaml  fdg_grpo_smoke.yaml  fdg_reward.yaml
data/: benchmark_0409.json
experiments/rollout_rerank_math_verify/: README.md
logs/: vllm_formalizer.pid  vllm_graph.pid  vllm_prover.pid
prompts/: full_proof_scorer.md  lemma_formalizer.md  lemma_formalizer_no_think.md  lemma_prover_no_think.md  prompts.py  proof_graph.md  proof_graph_no_DAG.md  proofscore_dependency_check.md  proofscore_semantinc_check.md  step_proof_scorer.md
prompts/system/: fdg.md  fdg_full_graph.md  fdg_origin4.md  fdg_origin4_reduce.md  fdg_origin4_v0.md  formalize_obligation.api_context.md
prompts/user/: fdg.md  fdg_full_graph.md  fdg_v1.md  formalize_obligation.api_context.md  formalize_obligation.context_ablation.md  formalize_obligation.md  formalize_obligation.paper_goedel_v2.md  prove.paper_goedel_v2.md
proofflow/: __init__.py  cli.py  experiment_lean_runtime.py  fdg_graph.py  fdg_stage2_runner.py  fdg_stage3_runner.py  fdg_stage_common.py  graph_mode.py  io.py  lean_check.py  llm_worker.py  local_vllm.py  node_schema.py  prompt_builder.py  proof_formalize.py  proof_graph.py  proof_graph_archive.py  proof_prover.py  proof_scorer.py  proofflow.py  runtime_common.py  stage2_common.py  stage2_runner.py  stage3_runner.py  utils.py  vis.py
proofflow/pipeline/: __init__.py  artifacts.py  batch_engine.py  context_builders.py  fdg_stages.py  lean_runtime.py  llm_backends.py  runner.py  specs.py  stages.py
proofflow/rl_fdg/: __init__.py  dataset.py  evaluator.py  formalizer_bridge.py  parser.py  prompting.py  prover_bridge.py  reward_components.py  reward_fn.py  reward_types.py  runtime_actor.py
scripts/: aggregate_stage3_verify_ratios.py  cnt_prover_token.py  count_prove_prompt_tokens.py  interactive_stage3_viewer.py  reward_cnt.ipynb  reward_dist_by_step.py  reward_trace_stats_by_step.py  run_8b_32b_10k_then_rollout.sh  run_build_calc_graph_all_stages.sh  run_build_calc_graph_stage1.sh  run_build_calc_graph_stage2.sh  run_build_calc_graph_stage3.sh  run_check_stage3_fully_verified.sh  run_experiment.sh  run_experiment_ctx_ablation.sh  run_prompt_ablation.sh  run_visualize_calc_graph_stage1.sh  run_visualize_calc_graph_stage2.bat  run_visualize_calc_graph_stage2.sh  start_all_vllm.sh  start_vllm_graph_qwen3.sh  start_vllm_prover.sh  stop_all_vllm.sh  verify_lean_file.py
scripts/rl/: eval_fdg_builder_offline.py  extract_fdg_rl_subset.py  prepare_fdg_rl_data.py  run_fdg_grpo.py  run_fdg_grpo.sh  run_fdg_grpo_412.sh  run_fdg_grpo_412_config.sh
tests/: test_fdg_formalizer_context.py  test_fdg_graph.py  test_lean_check_kimina.py  test_pipeline_artifacts.py  test_pipeline_context_builders.py  test_pipeline_fdg_stages.py
tests/rl_fdg/: test_evaluator.py  test_reward_components.py  test_runtime_actor.py
(+2326 files in other folders)
